objects/InvolvedOrganization__c.object
<CustomObject>
    <fields>
        <fullName>BusinessRiskEscalation__c</fullName>
        <label>Business Risk Escalation</label>
        <referenceTo>BusinessRiskEscalations__c</referenceTo>
        <relationshipLabel>Involved Organizations</relationshipLabel>
        <relationshipName>Involved_Organizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(((1 AND 2 AND 4 AND 5) OR 3) AND 6) OR (((1 AND 2 AND 4 AND 5) OR 3) AND 7 AND 8)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.SubEntity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.TECH_FromBRE__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Return Center</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Involved Organizations</relationshipLabel>
        <relationshipName>Involved_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Involved_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_FromBRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_FromBRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_Organization__c</fullName>
        <formula>Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueField__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueField</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_Entity__c</fullName>
        <formula>Organization__r.Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_SubEntity__c</fullName>
        <formula>IF( Organization__r.Location__c !=&apos;&apos;, 
Tech_Entity__c &amp; &quot; - &quot; &amp; Organization__r.SubEntity__c , &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_SubEntity</label>
        <type>Text</type>
    </fields>
    <label>Involved Organization</label>
    <nameField>
        <displayFormat>IO-{00}</displayFormat>
        <label>Involved Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involved Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IO_VR01_Representative</fullName>
        <active>true</active>
        <description>I2P - While Involved Organization Representative should not be blank</description>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c),ISBLANK(Representative__r.Username ))</errorConditionFormula>
        <errorMessage>We are unable to select an appropriate Representative. Either Change the Entity,Sub-Entity  Or select that field manually</errorMessage>
    </validationRules>
</CustomObject>